Stopping the flickering of ng-cloak elements. Forgot to add the css file in last message

--- a/aspnetcore/RentStuff.FrontEnd/src/RentStuff.FrontEnd/wwwroot/assets/css/villareal-green.css
+++ b/aspnetcore/RentStuff.FrontEnd/src/RentStuff.FrontEnd/wwwroot/assets/css/villareal-green.css
@@ -4801,6 +4801,15 @@ hr {
 .header-sticky .header-wrapper {
   min-height: 194px; }
 
+/* 
+  Allow angular.js to be loaded in body, hiding cloaked elements until 
+  templates compile.  The !important is important given that there may be 
+  other selectors that are more specific or come later and might alter display.  
+ */
+.ng-cloak {
+  display: none !important;
+}
+
 .header-top {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
   margin: 0 -1000px;
